Issue #9828: Destroy the GIL in Py_Finalize(), so that it gets properly re-created on a subsequent call to Py_Initialize().  The problem (a crash) wouldn't appear in 3.1 or 2.7 where the GIL's structure is more trivial.